# mCGCNN

./: .gitignore  LICENSE  README.md  inference.py  predict.py  preprocess.py  setup.cfg  train.py
mcgcnn/: graph_builder.py  model.py  train_utils.py
pretrained_models/: mcgcnn_pretrained_tot_mom_v1.pt
sample_dataset/: dataset.csv  magnetic_atom_init.json
