[metadata]
name = mcgcnn
version = 0.1.0
description = "mCGCNN: A Dual-Stream Crystal Graph Convolutional Neural Network for Magnetic Materials"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SouravMal/mCGCNN
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

install_requires =
    torch>=2.5.1
    pymatgen
    pandas>=3.0.3
    numpy>=2.3.1
    tqdm>=4.67.3

[options.packages.find]
exclude =
    sample_dataset*
    pretrained_models*
    outputs*
    inference_results*
